fix high contrast issues

--- a/src/assets/css/radio--rating.css
+++ b/src/assets/css/radio--rating.css
@@ -131,5 +131,6 @@ input[disabled] + .r-radio:hover {
 
 input[disabled] + .r-radio svg {
 	fill: #ccc;
-	transform: scale(.625);
+	transform: scale(.5);
+	opacity: .3;
 }
